<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="enterAlways"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:weightSum="1">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_weight="1.00" />

            <ImageView
                android:id="@+id/btnRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:src="@drawable/ic_refresh"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

</layout>